# EcoDB

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  THIRD_PARTY_LICENSES  consolidacion_v1_brief.md  consolidacion_v1_plan.md  consolidacion_v1_spec.md  docker-compose.benchmark.yml  docker-compose.seed.yml  docker-compose.yml  memory_agent_v1_brief.md  memory_agent_v1_plan.md  memory_agent_v1_spec.md  verification_checkpoint.md
api/: .dockerignore  Dockerfile  admin.py  agents.py  auth.py  background.py  bootstrap_first_apikey.py  briefing.py  cases.py  cell_worker.py  cells.py  clusters.py  documents.py  events.py  foresights.py  gliner_service.py  graph.py  main.py  memories.py  migrate_3_0c_entity_links.py  migrations.py  onboarding.py  permissions.py  projects.py  rate_limit.py  requirements.txt  reranker.py  search.py  settings.py  skills.py  stats.py  teams.py  users.py  worker.py  workspaces.py
dashboard/: .gitignore  CLAUDE.md  MISTAKES.md  eco_openapi.json  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
design_system/: .gitignore  BRIEF_phase1_kit.md  DASHBOARD_BACKEND_GUIDE.md  EcoDB-Dashboard-prototype.html  HANDOFF.md  design.md  kit-overlays.jsx  styles.css
docker-entrypoint-initdb.d/: 00-cell-role.sql
docs/: EcoDB_runbook_backup.md  (+3 more)
ecodb-langchain/: README.md  pyproject.toml
ecodb-langchain/examples/: quickstart.py
ecodb-langchain/tests/: test_cell_agent.py  test_ecodb_langchain.py
eval/: README.md  (+13 more)
(+234 files in other folders)
