[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecodb-langchain"
version = "0.2.0"
description = "LangChain / LangGraph integration for EcoDB."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Jose Antonio Ortiz Melo" }]
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.3"]
mcp = ["langchain-mcp-adapters>=0.1"]
dev = ["pytest>=8.0", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/ecodb_langchain"]
